applications/gatus/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatus
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    spec:
      automountServiceAccountToken: false
      containers:
        - image: twinproduction/gatus:v5.37.0@sha256:094eb186e55235db367e90e9d56140e5897b7044c41de23cde4cc18e6da1242e
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: http
          name: gatus
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: http
          securityContext:
            readOnlyRootFilesystem: true
            runAsGroup: 65534
            runAsNonRoot: true
            runAsUser: 65534
          volumeMounts:
            # NOTE: need to list each file otherwise it conflicts with the config.yaml file created by Gatus
            - mountPath: /config/config.yaml
              subPath: config.yaml
              name: gatus-config
              readOnly: true
            - mountPath: /config/dns.yaml
              subPath: dns.yaml
              name: gatus-config
              readOnly: true
            - mountPath: /config/mail.yaml
              subPath: mail.yaml
              name: gatus-config
              readOnly: true
      securityContext:
        fsGroup: 65534
      serviceAccountName: default
      volumes:
        - name: gatus-config
          configMap:
            name: gatus-config
