applications/gatus/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatus
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  type: ClusterIP
