applications/gatus/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatus
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Gatus
    gethomepage.dev/description: Automated developer-oriented status page
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: gatus
    gethomepage.dev/pod-selector: ""
spec:
  ingressClassName: traefik
  rules:
    - host: gatus.services.sbling.net
      http:
        paths:
          - backend:
              service:
                name: gatus
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - gatus.services.sbling.net
      secretName: gatus-services-sbling-net-prod-cert
